syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "FeverTimeAvatar.proto";

message EnterFeverTimeActivityStageCsReq {
	uint32 PEGMAJIBMNM = 13;
	repeated FeverTimeAvatar avatar_list = 9;
	uint32 BMJNIOLCCLL = 4;
	uint32 id = 10;
}