syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "SceneBattleInfo.proto";

message EnterFeverTimeActivityStageScRsp {
	uint32 id = 7;
	SceneBattleInfo battle_info = 11;
	uint32 retcode = 6;
}