syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message SceneEnterStageCsReq {
    uint32 stage_id = 5;
}
